--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,3 +2,31 @@
 compileSdk = "33"
 minSdk = "26"
 targetSdk = "33"
+
+androidxCore = "1.10.1"
+androidxLifecycle = "2.6.1"
+androidxActivityCompose = "1.7.2"
+
+junit = "4.13.2"
+
+androidxTestJunit = "1.1.5"
+espresso = "3.5.1"
+
+[libraries]
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivityCompose" }
+
+compose-bom = { module = "androidx.compose:compose-bom", version = "2023.05.01" }
+compose-ui = { module = "androidx.compose.ui:ui" }
+compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-material3 = { module = "androidx.compose.material3:material3" }
+compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
+
+junit = { module = "junit:junit", version.ref = "junit" }
+
+androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestJunit" }
+espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
