--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,9 @@ compileSdk = "33"
 minSdk = "26"
 targetSdk = "33"
 
+androidGradlePlugin = "8.0.1"
+kotlin = "1.8.21"
+
 androidxCore = "1.10.1"
 androidxLifecycle = "2.6.1"
 androidxActivityCompose = "1.7.2"
@@ -11,6 +14,11 @@ junit = "4.13.2"
 
 androidxTestJunit = "1.1.5"
 espresso = "3.5.1"
+
+[plugins]
+android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
