--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidxLifecycle = "2.6.1"
 androidxActivityCompose = "1.7.2"
 androidxNavigation = "2.5.3"
 androidxHiltNavigationCompose = "1.0.0"
+androidxPalette = "1.0.0"
 
 coil = "2.2.2"
 
@@ -44,6 +45,7 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
+androidx-palette = { module = "androidx.palette:palette", version.ref = "androidxPalette" }
 
 compose-bom = { module = "androidx.compose:compose-bom", version = "2023.05.01" }
 compose-ui = { module = "androidx.compose.ui:ui" }
