--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ androidxActivityCompose = "1.7.2"
 androidxNavigation = "2.5.3"
 androidxHiltNavigationCompose = "1.0.0"
 androidxPalette = "1.0.0"
+androidxPaging = "3.1.1"
+androidxPagingCompose = "1.0.0-alpha20"
 
 coil = "2.4.0"
 
@@ -46,6 +48,8 @@ androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "l
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-palette = { module = "androidx.palette:palette", version.ref = "androidxPalette" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "androidxPaging" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "androidxPagingCompose" }
 
 compose-bom = { module = "androidx.compose:compose-bom", version = "2023.05.01" }
 compose-ui = { module = "androidx.compose.ui:ui" }
